--- a/index.html
+++ b/index.html
@@ -6,8 +6,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luca Ubiali - Imprenditore digitale</title>
+
+    <script src="https://kit.fontawesome.com/6f6140557e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    In costruzione...
+    <nav>
+        <div class="nav-container">
+            <div class="logo">
+                <a href="./index.html"><img src="./img/logo.png" alt=""></a>
+                <h3>imrenditore digitale</h3>
+            </div>
+            <div class="nav">
+                <a href="#hero">Inizia Ora</a>
+                <a href="#content">Contenuti</a>
+                <a href="#testimonial">Testimonianze</a>
+                <a href="#faq">FAQ</a>
+                <a href="#" class="main-btn">Iscriviti</a>
+            </div>
+        </div>
+    </nav>
+    <div class="hero" id="hero">
+        <div class="column">
+            <div class="star">
+                <h3><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></h3>
+                <h2>miliardi di clienti soddisfatti</h2>
+            </div>
+            <h1>Inizia a guadagnare grazie al percorso online di Global Destiny™</h1>
+            <p>Accedi alla conoscenza ed alle strategie di esperti con anni di esperienza. Centinaia di ore di corsi, community dedicata e molto altro.
+            </p>
+            <a href="#" class="main-btn">Iscrviti ora</a>
+        </div>
+        <div class="column">
+            <img src="./img/logo.png" alt="">
+        </div>
+    </div>
 </body>
 </html>
