--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
@@ -9,7 +10,7 @@
 
     <script src="https://kit.fontawesome.com/6f6140557e.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="noselect">
     <nav>
         <div class="nav-container">
             <div class="logo">
@@ -25,20 +26,156 @@
             </div>
         </div>
     </nav>
+
     <div class="hero" id="hero">
         <div class="column">
             <div class="star">
-                <h3><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></h3>
+                <h3><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                        class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></h3>
                 <h2>miliardi di clienti soddisfatti</h2>
             </div>
             <h1>Inizia a guadagnare grazie al percorso online di Global Destiny™</h1>
-            <p>Accedi alla conoscenza ed alle strategie di esperti con anni di esperienza. Centinaia di ore di corsi, community dedicata e molto altro.
+            <p>Accedi alla conoscenza ed alle strategie di esperti con anni di esperienza. Centinaia di ore di corsi,
+                community dedicata e molto altro.
             </p>
             <a href="#" class="main-btn">Iscrviti ora</a>
         </div>
         <div class="column">
-            <img src="./img/logo.png" alt="">
+            <img class="border-radius" src="./img/placeholder.png" alt="">
         </div>
     </div>
+
+    <div class="main">
+        <h2>come funziona?</h2>
+        <h1>Tutto su un'unica piattaforma.</h1>
+        <p>Potrete dire una volta per tutte addio a venditori di sogni, guru, corsi, consulenze di ogni tipo. Dopo un
+            anno di lavoro, oltre 1.000.000€ investiti in esperti, ricerca e sviluppo, nasce Global Destiny: il
+            movimento di imprenditori digitali con l’obiettivo di eccellere tramite attività online, creando così un
+            destino globale.</p>
+        <img class="border-radius" src="./img/placeholder.png" alt="">
+        <div class="main-column">
+            <div class="column">
+                <h2>cosa è incluso</h2>
+                <img src="./img/gd-logo.png" alt="">
+                <p><i class="fa-solid fa-check"></i> Oltre 100 ore di videocorsi e dirette online. 10+ metodi di
+                    guadagno online attuabili con zero budget e/o con budget più elevati.</p>
+                <p><i class="fa-solid fa-check"></i> Community dedicate in base al business di riferimento.</p>
+                <p><i class="fa-solid fa-check"></i> Dirette live, contenuti aggiornati ogni settimana, giveaway e
+                    accesso a tutti i nuovi corsi.</p>
+                <p><i class="fa-solid fa-check"></i> Accesso al programma di affiliazione per un ulteriore fonte di
+                    rendita passiva. </p>
+            </div>
+            <div class="column">
+                <img class="border-radius" src="./img/placeholder.png" alt="">
+            </div>
+        </div>
+    </div>
+
+    <div class="contents" id="contents">
+        <h2>i contenuti</h2>
+        <div class="content-element">
+            <img class="border-radius" src="./img/placeholder.png" alt="">
+            <div class="content-info">
+                <h2>titolo corso</h2>
+                <p>//descrizione</p>
+            </div>
+        </div>
+        <div class="content-element">
+            <img class="border-radius" src="./img/placeholder.png" alt="">
+            <div class="content-info">
+                <h2>titolo corso</h2>
+                <p>//descrizione</p>
+            </div>
+        </div>
+        <div class="content-element">
+            <img class="border-radius" src="./img/placeholder.png" alt="">
+            <div class="content-info">
+                <h2>titolo corso</h2>
+                <p>//descrizione</p>
+            </div>
+        </div>
+        <div class="content-element">
+            <img class="border-radius" src="./img/placeholder.png" alt="">
+            <div class="content-info">
+                <h2>titolo corso</h2>
+                <p>//descrizione</p>
+            </div>
+        </div>
+        <div class="content-element">
+            <img class="border-radius" src="./img/placeholder.png" alt="">
+            <div class="content-info">
+                <h2>titolo corso</h2>
+                <p>//descrizione</p>
+            </div>
+        </div>
+        <div class="content-element">
+            <img class="border-radius" src="./img/placeholder.png" alt="">
+            <div class="content-info">
+                <h2>titolo corso</h2>
+                <p>//descrizione</p>
+            </div>
+        </div>
+        <div class="content-element">
+            <img class="border-radius" src="./img/placeholder.png" alt="">
+            <div class="content-info">
+                <h2>titolo corso</h2>
+                <p>//descrizione</p>
+            </div>
+        </div>
+        <div class="content-element">
+            <img class="border-radius" src="./img/placeholder.png" alt="">
+            <div class="content-info">
+                <h2>titolo corso</h2>
+                <p>//descrizione</p>
+            </div>
+            </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="testimonial" id="testimonial">
+        <h2>testimonianze</h2>
+    </div>
+    
+    <div class="faq" id="faq">
+        <h2>domande frequenti</h2>
+    
+        <div class="accordion">
+            <div class="accordion-item">
+                <h2>Cos’è Global Destiny?</h2>
+                <p>Global Destiny va a stravolgere completamente quella che è l’esperienza di studio online. Una volta effettuato l’accesso avrai modo di accedere a videocorsi, community private in cui chattare con i membri e con Luca, accesso a tutti i futuri corsi, giveaway, dirette live e molto altro ancora. Invece che pagare ogni singolo contenuto singolarmente, avrai modo di accedere a tutto attraverso un pagamento ricorrente mensile.</p>
+            </div>
+            <div class="accordion-item">
+                <h2>Quanto costa e come posso pagare?</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit eaque, officia mollitia
+                    exercitationem non nesciunt molestiae! Accusamus suscipit, quis vel impedit harum odio dolores at
+                    reprehenderit quibusdam, molestiae, excepturi delectus!</p>
+            </div>
+            <div class="accordion-item">
+                <h2>Posso disdire quando voglio?</h2>
+                <p>Certamente. Non c’è alcun vincolo contrattuale e potrai disdire il tuo abbonamento in qualsiasi momento. Una volta disdetto non avrai più accesso ad alcun contenuto.</p>
+            </div>
+            <div class="accordion-item">
+                <h2>Come faccio a sapere se fa per me?</h2>
+                <p>L’obiettivo principale di Global Desitny è di essere universale e per tutti. I modelli di business e gli insegnamenti nei diversi corsi sono adattati a seconda del tuo livello di budget e tempo a disposizione. A seconda del tuo livello, troverai esattamente il metodo che fa al caso tuo.</p>
+            </div>
+            <div class="accordion-item">
+                <h2>I corsi sono completi?</h2>
+                <p>All’interno di Global Destiny otterrai accesso a tutti i corsi nella loro versione completa, ovvero riceverai tutte le informazioni che ti permetteranno potenzialmente di guadagnare grazie ad ognuno dei modelli insegnati. Le versioni avanzate saranno utili a chi ottiene già dei risultati con un determinato modello di business.</p>
+            </div>
+            <div class="accordion-item">
+                <h2>Voglio accedere ma ho qualche dubbio. Chi posso contattare?</h2>
+                <p>Assicurarmi che tu possa avere e conoscere il necessario per partire a costruire il tuo futuro è la mia priorità. <a href="https://wa.link/powu5e">Clicca qui</a> per inviare un messaggio su WhatsApp o chiama il numero +39 345 926 9565.</p>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <img src="./img/gd-logo.png" alt="">
+        <p>I miei risultati e quelli dei miei studenti non sono tipici. Studiando in Global Destiny potrai guadagnare di meno o di più rispetto ai risultati che vedi.
+            Tutti i business comportano rischi e tempo per consolidarsi. Se stai cercando “guadagni facili” o “diventa ricco in un giorno” questo corso NON fa per te.</p>
+            <p> Copyright &copy; <script>document.write(new Date().getFullYear())</script> - All Rights Reserved</p>
+    </footer>
+    <script src="./script/acordion.js"></script>
 </body>
 </html>
