--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             <div class="star">
                 <h3><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
                         class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></h3>
-                <h2>miliardi di clienti soddisfatti</h2>
+                <h2>MIGLIAIA DI CLIENTI SODDISFATTI</h2>
             </div>
             <h1>Inizia a guadagnare grazie al percorso online di Global Destiny™</h1>
-            <p>Accedi alla conoscenza ed alle strategie di esperti con anni di esperienza. Centinaia di ore di corsi,
-                community dedicata e molto altro.
+            <p>Accedi alla conoscenza ed alle strategie di Professionisti con anni di esperienza. Decine di ore in Live ogni settimana, centinaia di ore di corsi registrati, comunity di supporto e tanto altro!
+
             </p>
             <a href="#" class="main-btn">Iscrviti ora</a>
         </div>
@@ -47,90 +47,115 @@
 
     <div class="main">
         <h2>come funziona?</h2>
-        <h1>Tutto su un'unica piattaforma.</h1>
-        <p>Potrete dire una volta per tutte addio a venditori di sogni, guru, corsi, consulenze di ogni tipo. Dopo un
-            anno di lavoro, oltre 1.000.000€ investiti in esperti, ricerca e sviluppo, nasce Global Destiny: il
-            movimento di imprenditori digitali con l’obiettivo di eccellere tramite attività online, creando così un
-            destino globale.</p>
-        <img class="border-radius" src="./img/placeholder.png" alt="">
-        <div class="main-column">
-            <div class="column">
-                <h2>cosa è incluso</h2>
-                <img src="./img/gd-logo.png" alt="">
-                <p><i class="fa-solid fa-check"></i> Oltre 100 ore di videocorsi e dirette online. 10+ metodi di
-                    guadagno online attuabili con zero budget e/o con budget più elevati.</p>
-                <p><i class="fa-solid fa-check"></i> Community dedicate in base al business di riferimento.</p>
-                <p><i class="fa-solid fa-check"></i> Dirette live, contenuti aggiornati ogni settimana, giveaway e
-                    accesso a tutti i nuovi corsi.</p>
-                <p><i class="fa-solid fa-check"></i> Accesso al programma di affiliazione per un ulteriore fonte di
-                    rendita passiva. </p>
-            </div>
-            <div class="column">
-                <img class="border-radius" src="./img/placeholder.png" alt="">
-            </div>
+        <h1>Tutto su un’unica
+            piattaforma in continuo aggiornamento.</h1>
+        <p>Potrete dire una volta per tutte addio a venditori di sogni, guru, consulenze di ogni tipo. Dopo 4 anni di lavoro, dopo decine di migliaia o forse centinaia di migliaia di € investiti in formazione, ricerca e sviluppo, nasce Global Destiny: la comunity per eccellenza di imprenditori digitali con l’obiettivo di emergere tramite attività online, stravolgendo non solo le proprie finanze ma tutte le sfere più importanti della vita come la salute, la crescita personale, le relazioni.</p>
+        <img class="border-radius" src="./img/mockup.png" alt="">
+        <h2>cosa è incluso</h2>
+        <div class="included">
+            <p><i class="fa-solid fa-check"></i> Oltre 100 ore di videocorsi e Live Streaming ogni settimana.</p>
+            <p><i class="fa-solid fa-check"></i> 5+ metodi di guadagno online attuabili con zero budget e/o con budget più elevati</p>
+            <p><i class="fa-solid fa-check"></i> Comunity dedicate in base al business di riferimento e supporto 24/7.</p>
+            <p><i class="fa-solid fa-check"></i> Programma affiliazione per chi parte con 0€ di budget.</p>
         </div>
     </div>
 
     <div class="contents" id="contents">
         <h2>i contenuti</h2>
         <div class="content-element">
-            <img class="border-radius" src="./img/placeholder.png" alt="">
+            <img class="border-radius" src="./img/corso base.png" alt="">
             <div class="content-info">
-                <h2>titolo corso</h2>
-                <p>//descrizione</p>
+                <h2>CORSO BASE | 19 VIDEO </h2>
+                <p>Se sei un aspirante Trader, questo percorso sarà fondamentale per capire e conoscere tutti gli strumenti
+                    necessari per
+                    fare Trading in modo professionale. </p>
             </div>
         </div>
         <div class="content-element">
-            <img class="border-radius" src="./img/placeholder.png" alt="">
+            <img class="border-radius" src="./img/bronzo.png" alt="">
             <div class="content-info">
-                <h2>titolo corso</h2>
-                <p>//descrizione</p>
+                <h2>CORSO BRONZO | 1 PERCORSO A TUA SCELTA | 10 LIVE STREAMING A SETTIMANA </h2>
+                <p>Puoi scegliere un solo percorso tra quelli riportati di seguito, incluso avrai accesso alla comunity di
+                    discord, percorso Mindset & percorso di Network University. Il percorso di Trading ti porterà da base a
+                    intermedio.</p>
             </div>
         </div>
         <div class="content-element">
-            <img class="border-radius" src="./img/placeholder.png" alt="">
+            <img class="border-radius" src="./img/argento.png" alt="">
             <div class="content-info">
-                <h2>titolo corso</h2>
-                <p>//descrizione</p>
+                <h2>CORSO ARGENTO | 2 PERCORSI A TUA SCLETA | 23 LIVE STREAMING A SETTIMANA </h2>
+                <p>Puoi scegliere 2 percorsi tra quelli riportati di seguito, incluso avrai accesso alla comunity di
+                    discord, percorso Mindset &
+                    percorso di Network University.Inoltre avrai accesso alle Live di Trading e Airbnb in tempo reale, dove
+                    puoi interagire, facendo domande, direttamente
+                    all’educatore.Le live di Trading ti porteranno da un livello Base a un livello Avanzato.Le live di
+                    Airbnb ti porteranno fino alla gestione del tuo Primo Immobile.</p>
             </div>
         </div>
         <div class="content-element">
-            <img class="border-radius" src="./img/placeholder.png" alt="">
+            <img class="border-radius" src="./img/oro.png" alt="">
             <div class="content-info">
-                <h2>titolo corso</h2>
-                <p>//descrizione</p>
+                <h2>CORSO ORO | TUTTI I PERCORSI INCLUSI</h2>
+                <p>Hai tutti i percorsi di Global Destiny riportati di seguito, inclusi i vantaggi dei percorsi precedenti.
+                    Inoltre con il percorso Oro hai innumerevoli vantaggi come un supporto VIP, doppia % di guadagno nelle
+                    affiliazioni rispetto
+                    ai percorsi precedenti, sconti e vantaggi su viaggi ed eventi.</p>
             </div>
         </div>
         <div class="content-element">
-            <img class="border-radius" src="./img/placeholder.png" alt="">
+            <img class="border-radius" src="./img/mindset.png" alt="">
             <div class="content-info">
-                <h2>titolo corso</h2>
-                <p>//descrizione</p>
+                <h2>CORSO MINDSET | +15 CORSI | 1 LIVE STREAMING A SETTIMANA </h2>
+                <p>Non puoi gestire più soldi di quanti la tua mente ne sappia gestire, questo percorso ha l’obiettivo di
+                    sradicare dalla
+                    tua mente ogni credenza depotenziante che hai sul denaro.</p>
             </div>
         </div>
         <div class="content-element">
-            <img class="border-radius" src="./img/placeholder.png" alt="">
+            <img class="border-radius" src="./img/airbnb.png" alt="">
             <div class="content-info">
-                <h2>titolo corso</h2>
-                <p>//descrizione</p>
+                <h2>CORSO AIRBNB | +50 CORSI | 2 LIVE STREAMING A SETTIMANA</h2>
+                <p>Questo percorso ti porterà a conoscere questo mondo altamente lucrativo degli affitti brevi, fino alla
+                    gestione del tuo primo immobile. Inoltre hai accesso a tutte le live di Airbnb dove puoi fare domande
+                    direttamente all’educatore.</p>
             </div>
         </div>
         <div class="content-element">
-            <img class="border-radius" src="./img/placeholder.png" alt="">
+            <img class="border-radius" src="./img/crescita personale.png" alt="">
             <div class="content-info">
-                <h2>titolo corso</h2>
-                <p>//descrizione</p>
+                <h2>CRESCITA PERSONALE | +10h DI VIDEOCORSI </h2>
+                <p>In Global Destiny non ci preoccupiamo di crescere solo le tue finanze ma anche di crescere sotto il punto
+                    di vista della salute,
+                    relazioni, valore personale e spirituale.</p>
             </div>
         </div>
         <div class="content-element">
-            <img class="border-radius" src="./img/placeholder.png" alt="">
+            <img class="border-radius" src="./img/network university.png" alt="">
             <div class="content-info">
-                <h2>titolo corso</h2>
-                <p>//descrizione</p>
-            </div>
-            </div>
+                <h2>NETWORK UNIVERSITY | +35 CORSI | 1 LIVE STREAMING A SETTIMANA</h2>
+                <p>Il percorso perfetto per capitalizzarti in modo costante e veloce sfruttando il modello del Network
+                    Marketing
+                    e tutte le affiliazioni che ne derivano.</p>
             </div>
         </div>
+        <div class="content-element">
+            <img class="border-radius" src="./img/crypto.png" alt="">
+            <div class="content-info">
+                <h2>CRYPTO E METAVERSO | +15 CORSI | 1 LIVE STREAMING A SETTIMANA</h2>
+                <p>Percorso specifico per Lucrare nel mondo Crypto, Nft, Metaverso, Defi. Verrai a conoscenza su come investire in crypto, a breve e lungo termine. Come individuare ed analizzare i migliori progetti NFT e Defii.</p>
+            </div>
+        </div>
+        <div class="content-element">
+            <img class="border-radius" src="./img/social.png" alt="">
+            <div class="content-info">
+                <h2>SOCIAL ACADEMY | +10 CORSI </h2>
+                <p>Il percorso che svela gli algoritmi segreti dei social Network, quali Instagram, TikTok e YouTube con la finalità di farti 
+                    diventare virale. Il percorso viene aggiornato ogni volta che l’algoritmo cambia.</p>
+            </div>
+        </div>
+        <a href="#" class="main-btn">Iscrviti ora</a>
+    </div>
+    </div>
     </div>
 
     <div class="testimonial" id="testimonial">
@@ -143,13 +168,11 @@
         <div class="accordion">
             <div class="accordion-item">
                 <h2>Cos’è Global Destiny?</h2>
-                <p>Global Destiny va a stravolgere completamente quella che è l’esperienza di studio online. Una volta effettuato l’accesso avrai modo di accedere a videocorsi, community private in cui chattare con i membri e con Luca, accesso a tutti i futuri corsi, giveaway, dirette live e molto altro ancora. Invece che pagare ogni singolo contenuto singolarmente, avrai modo di accedere a tutto attraverso un pagamento ricorrente mensile.</p>
+                <p>Global Destiny stravolge completamente l'esperienza di studio online. Una volta effettuato l'accesso, avrai accesso a tutti i video corsi, alle comunità private dove potrai chattare con i membri e con Luca, a tutti i futuri corsi, ai giveaway, alle dirette live e molto altro. Invece di pagare per ogni singolo contenuto con la speranza di avere fortuna, avrai un supporto completo attraverso un pagamento mensile ricorrente molto più conveniente rispetto al primo mese, o se seguirai il percorso di Network University, potrai studiare gratuitamente.</p>
             </div>
             <div class="accordion-item">
                 <h2>Quanto costa e come posso pagare?</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit eaque, officia mollitia
-                    exercitationem non nesciunt molestiae! Accusamus suscipit, quis vel impedit harum odio dolores at
-                    reprehenderit quibusdam, molestiae, excepturi delectus!</p>
+                <p>Il pacchetto Bronzo/Base ha un costo iniziale di 199$ e si può pagare con qualsiasi carta del circuito Mastercard o Visa oppure con criptovaluta. I mesi successivi, per non perdere l'accesso al percorso, il supporto e la guida, il costo mensile sarà di 130$. Il pacchetto Silver ha un costo iniziale di 499$ e un costo mensile successivo di 190$. Il pacchetto Oro ha un costo iniziale di 999$ e un costo mensile successivo di 250$.</p>
             </div>
             <div class="accordion-item">
                 <h2>Posso disdire quando voglio?</h2>
@@ -157,22 +180,23 @@
             </div>
             <div class="accordion-item">
                 <h2>Come faccio a sapere se fa per me?</h2>
-                <p>L’obiettivo principale di Global Desitny è di essere universale e per tutti. I modelli di business e gli insegnamenti nei diversi corsi sono adattati a seconda del tuo livello di budget e tempo a disposizione. A seconda del tuo livello, troverai esattamente il metodo che fa al caso tuo.</p>
+                <p>L’obiettivo principale di Global Desitny è di essere universale e per tutti. I modelli di business e gli insegnamenti nei diversi corsi sono adattati a seconda del tuo livello di budget e tempo a disposizione. A seconda del tuo livello, troverai esattamente il metodo che fa al caso tuo. Se necessario potrai entrare in contatto con Luca che ti aiuterà a seguire il percorso più adatto a te.</p>
             </div>
             <div class="accordion-item">
                 <h2>I corsi sono completi?</h2>
-                <p>All’interno di Global Destiny otterrai accesso a tutti i corsi nella loro versione completa, ovvero riceverai tutte le informazioni che ti permetteranno potenzialmente di guadagnare grazie ad ognuno dei modelli insegnati. Le versioni avanzate saranno utili a chi ottiene già dei risultati con un determinato modello di business.</p>
+                <p>All’interno di Global Destiny otterrai accesso a tutti i corsi nella loro versione completa, ovvero riceverai tutte le informazioni che ti permetteranno potenzialmente
+                    di guadagnare grazie ad ognuno dei modelli insegnati. Le versioni avanzate saranno utili a chi ottiene già dei risultati con un determinato modello di business.</p>
             </div>
             <div class="accordion-item">
                 <h2>Voglio accedere ma ho qualche dubbio. Chi posso contattare?</h2>
-                <p>Assicurarmi che tu possa avere e conoscere il necessario per partire a costruire il tuo futuro è la mia priorità. <a href="https://wa.link/powu5e">Clicca qui</a> per inviare un messaggio su WhatsApp o chiama il numero +39 345 926 9565.</p>
+                <p>Assicurarmi che tu possa avere e conoscere il necessario per partire a costruire il tuo futuro è la mia priorità. <a href="https://wa.link/refrfn">Clicca qui</a>  per inviare un messaggio su WhatsApp al team di supporto di Luca +39 351 333 8851.</p>
             </div>
         </div>
     </div>
 
     <footer>
         <img src="./img/gd-logo.png" alt="">
-        <p>I miei risultati e quelli dei miei studenti non sono tipici. Studiando in Global Destiny potrai guadagnare di meno o di più rispetto ai risultati che vedi.
+        <p>I miei risultati e quelli dei miei studenti non sono tipici. Studiando in Global Destiny potrai guadagnare di meno o di più rispetto ai risultati che vedi e all’impegno che ci metti.
             Tutti i business comportano rischi e tempo per consolidarsi. Se stai cercando “guadagni facili” o “diventa ricco in un giorno” questo corso NON fa per te.</p>
             <p> Copyright &copy; <script>document.write(new Date().getFullYear())</script> - All Rights Reserved</p>
     </footer>
