--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
                 <h2>MIGLIAIA DI CLIENTI SODDISFATTI</h2>
             </div>
             <h1>Inizia a guadagnare grazie al percorso online di Global Destiny™</h1>
-            <p>Accedi alla conoscenza ed alle strategie di Professionisti con anni di esperienza. Decine di ore in Live ogni settimana, centinaia di ore di corsi registrati, comunity di supporto e tanto altro!
-
-            </p>
+            <p>Accesso a conoscenze e strategie dei professionisti con anni di esperienza. Decine di ore di formazione dal vivo ogni settimana, centinaia di ore di corsi registrati, una comunità di supporto e molto altro! Impara dai migliori e migliora la tua performance.</p>
             <a href="http://nvisionu.com/lucaubiali" class="main-btn">Iscrviti ora</a>
         </div>
         <div class="column">
@@ -56,14 +54,16 @@
         <h2>come funziona?</h2>
         <h1>Tutto su un’unica
             piattaforma in continuo aggiornamento.</h1>
-        <p>Potrete dire una volta per tutte addio a venditori di sogni, guru, consulenze di ogni tipo. Dopo 4 anni di lavoro, dopo decine di migliaia o forse centinaia di migliaia di € investiti in formazione, ricerca e sviluppo, nasce Global Destiny: la comunity per eccellenza di imprenditori digitali con l’obiettivo di emergere tramite attività online, stravolgendo non solo le proprie finanze ma tutte le sfere più importanti della vita come la salute, la crescita personale, le relazioni.</p>
+        <p>Potrete dire addio a venditori di sogni, guru e consulenze inutili. Dopo 4 anni di duro lavoro e un investimento significativo in formazione, ricerca e sviluppo, nasce Global Destiny: la comunità definitiva per imprenditori digitali che vogliono prosperare online e trasformare non solo le loro finanze, ma anche la loro salute, crescita personale e relazioni.</p>
+        <h3>Unisciti a noi per raggiungere il tuo destino globale!</h3>
+        <a href="http://nvisionu.com/lucaubiali" class="main-btn">Iscrviti ora</a>
         <img class="border-radius" src="./img/mockup.png" alt="">
         <h2>cosa è incluso</h2>
         <div class="included">
-            <p><i class="fa-solid fa-check"></i> Oltre 100 ore di videocorsi e Live Streaming ogni settimana.</p>
-            <p><i class="fa-solid fa-check"></i> 5+ metodi di guadagno online attuabili con zero budget e/o con budget più elevati</p>
+            <p><i class="fa-solid fa-check"></i> Oltre 100+ ore di videocorsi e Live Streaming ogni settimana.</p>
+            <p><i class="fa-solid fa-check"></i> 5+ metodi di guadagno online attuabili con zero budget e/o scalabili con budget più elevati</p>
             <p><i class="fa-solid fa-check"></i> Comunity dedicate in base al business di riferimento e supporto 24/7.</p>
-            <p><i class="fa-solid fa-check"></i> Programma affiliazione per chi parte con 0€ di budget.</p>
+            <p><i class="fa-solid fa-check"></i> Un programma affiliazione per chi parte con 0€ di budget.</p>
         </div>
     </div>
 
@@ -73,49 +73,35 @@
             <img class="border-radius" src="./img/corso base.png" alt="">
             <div class="content-info">
                 <h2>CORSO BASE | 19 VIDEO </h2>
-                <p>Se sei un aspirante Trader, questo percorso sarà fondamentale per capire e conoscere tutti gli strumenti
-                    necessari per
-                    fare Trading in modo professionale. </p>
+                <p>Sei un aspirante trader alla ricerca di un percorso completo per diventare un trader professionista? Il nostro corso ti fornirà tutti gli strumenti necessari per fare trading con successo. Impara dai migliori e preparati a raggiungere i tuoi obiettivi finanziari. </p>
             </div>
         </div>
         <div class="content-element">
             <img class="border-radius" src="./img/bronzo.png" alt="">
             <div class="content-info">
                 <h2>CORSO BRONZO | 1 PERCORSO A TUA SCELTA | 10 LIVE STREAMING A SETTIMANA </h2>
-                <p>Puoi scegliere un solo percorso tra quelli riportati di seguito, incluso avrai accesso alla comunity di
-                    discord, percorso Mindset & percorso di Network University. Il percorso di Trading ti porterà da base a
-                    intermedio.</p>
+                <p>Puoi scegliere un tuo percorso di successo! Con accesso alla comunità su Discord, al percorso Mindset e al percorso Network University. Il percorso di Trading ti porterà dalle basi all'intermedio, per farti diventare un trader esperto. </p>
             </div>
         </div>
         <div class="content-element">
             <img class="border-radius" src="./img/argento.png" alt="">
             <div class="content-info">
                 <h2>CORSO ARGENTO | 2 PERCORSI A TUA SCLETA | 23 LIVE STREAMING A SETTIMANA </h2>
-                <p>Puoi scegliere 2 percorsi tra quelli riportati di seguito, incluso avrai accesso alla comunity di
-                    discord, percorso Mindset &
-                    percorso di Network University.Inoltre avrai accesso alle Live di Trading e Airbnb in tempo reale, dove
-                    puoi interagire, facendo domande, direttamente
-                    all’educatore.Le live di Trading ti porteranno da un livello Base a un livello Avanzato.Le live di
-                    Airbnb ti porteranno fino alla gestione del tuo Primo Immobile.</p>
+                <p>Vuoi diventare un trader e un investitore immobiliare di successo? Scegli 2 dei nostri percorsi, incluso l'accesso alla comunità su Discord, al percorso Mindset e al percorso Network University. Avrai anche l'accesso alle nostre Live di Trading e Airbnb in tempo reale, dove potrai interagire direttamente con i nostri educatori. Le nostre live di Trading ti porteranno da un livello base a un livello avanzato, mentre le live di Airbnb ti insegneranno a gestire il tuo primo immobile.</p>
             </div>
         </div>
         <div class="content-element">
             <img class="border-radius" src="./img/oro.png" alt="">
             <div class="content-info">
                 <h2>CORSO ORO | TUTTI I PERCORSI INCLUSI</h2>
-                <p>Hai tutti i percorsi di Global Destiny riportati di seguito, inclusi i vantaggi dei percorsi precedenti.
-                    Inoltre con il percorso Oro hai innumerevoli vantaggi come un supporto VIP, doppia % di guadagno nelle
-                    affiliazioni rispetto
-                    ai percorsi precedenti, sconti e vantaggi su viaggi ed eventi.</p>
+                <p>Scegli il percorso Oro e diventa un membro VIP di Global Destiny! Con questo percorso avrai accesso a tutti i nostri corsi, oltre ai vantaggi dei percorsi precedenti. Riceverai un supporto VIP, guadagnerai il doppio delle commissioni rispetto ai percorsi precedenti, e avrai sconti e vantaggi su viaggi ed eventi. Non perdere questa occasione unica di raggiungere il successo finanziario e personale.</p>
             </div>
         </div>
         <div class="content-element">
             <img class="border-radius" src="./img/mindset.png" alt="">
             <div class="content-info">
                 <h2>CORSO MINDSET | +15 CORSI | 1 LIVE STREAMING A SETTIMANA </h2>
-                <p>Non puoi gestire più soldi di quanti la tua mente ne sappia gestire, questo percorso ha l’obiettivo di
-                    sradicare dalla
-                    tua mente ogni credenza depotenziante che hai sul denaro.</p>
+                <p>Il percorso Mindset di Global Destiny ha l'obiettivo di liberarti da ogni convinzione limitante sul denaro. Sapevi che la gestione del denaro inizia dalla tua mente? Impara a superare ogni blocco psicologico e diventa un vero maestro nella gestione delle tue finanze. </p>
             </div>
         </div>
         <div class="content-element">
@@ -131,33 +117,28 @@
             <img class="border-radius" src="./img/crescita personale.png" alt="">
             <div class="content-info">
                 <h2>CRESCITA PERSONALE | +10h DI VIDEOCORSI </h2>
-                <p>In Global Destiny non ci preoccupiamo di crescere solo le tue finanze ma anche di crescere sotto il punto
-                    di vista della salute,
-                    relazioni, valore personale e spirituale.</p>
+                <p>In Global Destiny, vogliamo aiutarti a crescere non solo finanziariamente, ma anche a livello personale e spirituale. Il nostro obiettivo è di migliorare la tua salute, le tue relazioni, il tuo valore personale e la tua crescita spirituale. Diventa un membro di Global Destiny e preparati a vivere una vita piena di benessere in ogni aspetto.</p>
             </div>
         </div>
         <div class="content-element">
             <img class="border-radius" src="./img/network university.png" alt="">
             <div class="content-info">
                 <h2>NETWORK UNIVERSITY | +35 CORSI | 1 LIVE STREAMING A SETTIMANA</h2>
-                <p>Il percorso perfetto per capitalizzarti in modo costante e veloce sfruttando il modello del Network
-                    Marketing
-                    e tutte le affiliazioni che ne derivano.</p>
+                <p>Stai cercando un modo per aumentare i tuoi guadagni in modo costante e veloce? Allora il percorso di Network Marketing di Global Destiny è quello che fa per te. Impara come sfruttare il potere del Network Marketing e tutte le opportunità di affiliazione che ne derivano. Con questo percorso, potrai capitalizzarti in modo efficiente e raggiungere i tuoi obiettivi finanziari più rapidamente.</p>
             </div>
         </div>
         <div class="content-element">
             <img class="border-radius" src="./img/crypto.png" alt="">
             <div class="content-info">
                 <h2>CRYPTO E METAVERSO | +15 CORSI | 1 LIVE STREAMING A SETTIMANA</h2>
-                <p>Percorso specifico per Lucrare nel mondo Crypto, Nft, Metaverso, Defi. Verrai a conoscenza su come investire in crypto, a breve e lungo termine. Come individuare ed analizzare i migliori progetti NFT e Defii.</p>
+                <p>Vuoi imparare come investire nel mondo delle criptovalute, NFT, Metaverse e Defi? Il percorso specifico per guadagnare in questo settore di Global Destiny è quello che fa per te. Scopri come investire a breve e lungo termine nelle criptovalute, come identificare e analizzare i migliori progetti NFT e Defi. Con questo percorso, avrai le conoscenze e gli strumenti per guadagnare in modo sicuro e intelligente nel mondo della tecnologia blockchain. </p>
             </div>
         </div>
         <div class="content-element">
             <img class="border-radius" src="./img/social.png" alt="">
             <div class="content-info">
                 <h2>SOCIAL ACADEMY | +10 CORSI </h2>
-                <p>Il percorso che svela gli algoritmi segreti dei social Network, quali Instagram, TikTok e YouTube con la finalità di farti 
-                    diventare virale. Il percorso viene aggiornato ogni volta che l’algoritmo cambia.</p>
+                <p>Anche questo. Il percorso ti aiuterà a comprendere gli algoritmi segreti dei social network come Instagram, TikTok e YouTube, in modo da diventare virale e mantenere la tua visibilità su questi canali. Inoltre, verrai costantemente aggiornato su eventuali cambiamenti negli algoritmi.</p>
             </div>
         </div>
         <a href="http://nvisionu.com/lucaubiali" class="main-btn">Iscrviti ora</a>
