--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta property="og:title" content="Luca Ubiali - Imprenditore Digitale" />
     <meta property="og:url" content="https://www.lucaubiali.it/" />
     <meta property="og:description"
-        content="Portfolio personale aggiornato a gennaio 2023" />
-    <meta property="og:image" content="https://www.lucaubiali.it/img/favicon.png" />
+        content="Accedi a conoscenze e strategie dei progessionisti con anni di esperienza." />
+    <meta property="og:image" content="https://www.lucaubiali.it/img/preview.png" />
 
     <script src="https://kit.fontawesome.com/6f6140557e.js" crossorigin="anonymous"></script>
 </head>
