--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     e tutte le affiliazioni che ne derivano.</p>
             </div>
             <div class="accordion-item">
-                <h2><span></span> CRYPTO E METAVERSO | +15 CORSI | 1 LIVE STREAMING A SETTIMANA</h2>
+                <h2><span>CRYPTO E METAVERSO</span> | +15 CORSI | 1 LIVE STREAMING A SETTIMANA</h2>
                 <p>Percorso specifico per Lucrare nel mondo Crypto, Nft, Metaverso, Defi. Verrai a conoscenza su come
                     investire in crypto, a breve e lungo termine. Come individuare ed analizzare i migliori progetti NFT
                     e Defii.</p>
