--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         <div class="nav-container">
             <div class="logo">
                 <a href="./index.html"><img src="./img/logo.png" alt=""></a>
-                <h3>imrenditore digitale</h3>
             </div>
             <div class="nav">
                 <a href="#hero">Inizia Ora</a>
@@ -61,11 +60,7 @@
             <h2>come funziona?</h2>
             <h1>Tutto su un’unica
                 piattaforma in continuo aggiornamento.</h1>
-            <p>Potrete dire una volta per tutte addio a venditori di sogni, guru, consulenze di ogni tipo. Dopo 4 anni
-                di lavoro, dopo decine di migliaia o forse centinaia di migliaia di € investiti in formazione, ricerca e
-                sviluppo, nasce Global Destiny: la comunity per eccellenza di imprenditori digitali con l’obiettivo di
-                emergere tramite attività online, stravolgendo non solo le proprie finanze ma tutte le sfere più
-                importanti della vita come la salute, la crescita personale, le relazioni.</p>
+            <p>Global Destiny è una community per imprenditori digitali con l'obiettivo di emergere online e migliorare le loro finanze, salute, crescita personale e relazioni. È stato creato dopo 4 anni di lavoro e investimenti in formazione e sviluppo.</p>
             <img class="border-radius" src="./img/mockup.png" alt="">
             <h2>cosa è incluso</h2>
             <div class="included">
