--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
                 <a href="http://nvisionu.com/lucaubiali" class="main-btn">Iscrviti ora</a>
             </div>
             <div class="column">
-                <img class="border-radius" src="./img/placeholder.png" alt="">
+                <video controls autoplay width="100%">                 
+                    <source src="./video/video.m4v" type="video/mp4">
+                </video>
             </div>
         </div>
     </div>
-
     <div class="main">
         <div class="main-content">
             <h2>come funziona?</h2>
