--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
                 <a href="http://nvisionu.com/lucaubiali" class="main-btn">Iscrviti ora</a>
             </div>
             <div class="column">
-                <video controls autoplay width="100%" src="https://vimeo.com/799407185"></video>
+                <video controls autoplay width="100%">                 
+                    <source src="https://youtu.be/TpTZYJz5Zsg" type="video/mp4">
+                </video>
             </div>
         </div>
     </div>
