--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="#contents">Contenuti</a>
                 <a href="#testimonial">Testimonianze</a>
                 <a href="#faq">FAQ</a>
-                <a href="http://nvisionu.com/lucaubiali" class="main-btn">Iscriviti</a>
+                <a href="https://qrplanet.com/f1qeoc" class="main-btn">Iscriviti</a>
             </div>
         </div>
     </nav>
@@ -47,7 +47,7 @@
                     Live ogni settimana, centinaia di ore di corsi registrati, comunity di supporto e tanto altro!
 
                 </p>
-                <a href="http://nvisionu.com/lucaubiali" class="main-btn">Iscrviti ora</a>
+                <a href="https://qrplanet.com/f1qeoc" class="main-btn">Iscrviti ora</a>
             </div>
             <div class="column">
                 <video controls autoplay width="100%">                 
@@ -72,7 +72,7 @@
                     24/7.</p>
                 <p><i class="fa-solid fa-check"></i> Programma affiliazione per chi parte con 0€ di budget.</p>
             </div>
-            <a href="http://nvisionu.com/lucaubiali" class="main-btn">Iscrviti ora</a>
+            <a href="https://qrplanet.com/f1qeoc" class="main-btn">Iscrviti ora</a>
         </div>
     </div>
 
@@ -154,7 +154,7 @@
                     diventare virale. Il percorso viene aggiornato ogni volta che l’algoritmo cambia.</p>
             </div>
         </div>
-        <a href="http://nvisionu.com/lucaubiali" class="main-btn">Iscrviti ora</a>
+        <a href="https://qrplanet.com/f1qeoc" class="main-btn">Iscrviti ora</a>
     </div>
 
     <div class="testimonial" id="testimonial">
@@ -193,7 +193,7 @@
             </div>
 
         </div>
-        <a href="http://nvisionu.com/lucaubiali" class="main-btn">Iscrviti ora</a>
+        <a href="https://qrplanet.com/f1qeoc" class="main-btn">Iscrviti ora</a>
     </div>
         
     <div class="accordion" id="faq">
