--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <meta property="og:title" content="Luca Ubiali - Imprenditore Digitale" />
     <meta property="og:url" content="https://www.lucaubiali.it/" />
-    <meta property="og:description" content="Portfolio personale aggiornato a gennaio 2023" />
+    <meta property="og:description" content="Inizia a guadagnare grazie al percorso online di Global Destiny™" />
     <meta property="og:image" content="https://www.lucaubiali.it/img/preview.png" />
 
     <script src="https://kit.fontawesome.com/6f6140557e.js" crossorigin="anonymous"></script>
@@ -50,9 +50,12 @@
                 <a href="https://qrplanet.com/f1qeoc" class="main-btn">Iscrviti ora</a>
             </div>
             <div class="column">
-                <video controls autoplay width="100%">                 
-                    <source src="https://youtu.be/TpTZYJz5Zsg" type="video/mp4">
-                </video>
+                <div class="video-container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/sLkWc3wAc3Y" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
             </div>
         </div>
     </div>
