--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     fare Trading in modo professionale. </p>
             </div>
             <div class="accordion-item">
-                <h2><span>CORSO BRONZO</span> | 1 PERCORSO A TUA SCELTA | 10 LIVE STREAMING A SETTIMANA</h2>
+                <h2><span>CORSO CORE</span> | 1 PERCORSO A TUA SCELTA | 10 LIVE STREAMING A SETTIMANA</h2>
                 <p>Puoi scegliere un solo percorso tra quelli riportati di seguito, incluso avrai accesso alla comunity
                     di
                     discord, percorso Mindset & percorso di Network University. Il percorso di Trading ti porterà da
@@ -98,7 +98,7 @@
                     intermedio.</p>
             </div>
             <div class="accordion-item">
-                <h2><span>CORSO ARGENTO</span> | 2 PERCORSI A TUA SCLETA | 23 LIVE STREAMING A SETTIMANA</h2>
+                <h2><span>CORSO ESSENTIAL</span> | 2 PERCORSI A TUA SCLETA | 23 LIVE STREAMING A SETTIMANA</h2>
                 <p>Puoi scegliere 2 percorsi tra quelli riportati di seguito, incluso avrai accesso alla comunity di
                     discord, percorso Mindset &
                     percorso di Network University.Inoltre avrai accesso alle Live di Trading e Airbnb in tempo reale,
@@ -108,7 +108,7 @@
                     Airbnb ti porteranno fino alla gestione del tuo Primo Immobile.</p>
             </div>
             <div class="accordion-item">
-                <h2><span>CORSO ORO</span> | TUTTI I PERCORSI INCLUSI</h2>
+                <h2><span>CORSO PREMIER</span> | TUTTI I PERCORSI INCLUSI</h2>
                 <p>Hai tutti i percorsi di Global Destiny riportati di seguito, inclusi i vantaggi dei percorsi
                     precedenti.
                     Inoltre con il percorso Oro hai innumerevoli vantaggi come un supporto VIP, doppia % di guadagno
